--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgresql://nak:1234@db:5432/mydatabase
+      DATABASE_URL: postgresql://nakgeun:12345@db:5432/mydatabase
     volumes:
       - .:/usr/src/app
     entrypoint: ["python3"]
@@ -20,8 +20,8 @@ services:
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_USER: nak
-      POSTGRES_PASSWORD: 1234
+      POSTGRES_USER: nakgeun
+      POSTGRES_PASSWORD: 12345
       POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
